--- a/resources/style.css
+++ b/resources/style.css
@@ -1,21 +1,21 @@
 .success {
 	border: 2px solid #0f0;
 	padding: 5px;
-	background-color: #afa;
+	background-color: #dfd;
 	color: #0f0;
 	font-weight: bold;
 }
 .error {
 	border: 2px solid #f00;
 	padding: 5px;
-	background-color: #faa;
+	background-color: #fdd;
 	color: #f00;
 	font-weight: bold;
 }
-.success {
+.warning {
 	border: 2px solid #f60;
 	padding: 5px;
-	background-color: #fa6;
+	background-color: #fd9;
 	color: #f60;
 	font-weight: bold;
 }
