--- a/resources/style.css
+++ b/resources/style.css
@@ -1,8 +1,8 @@
 .success {
-	border: 2px solid #0f0;
+	border: 2px solid #090;
 	padding: 5px;
 	background-color: #dfd;
-	color: #0f0;
+	color: #090;
 	font-weight: bold;
 }
 .error {
